--- a/tools/output.css
+++ b/tools/output.css
@@ -1,16 +1,33 @@
 body {
-  background-color: darkslategray;
+  background-color: #FFFBE4;
   border: 3px solid coral;
   margin: 10px;
   padding: 30px;
 }
 h1 {
-  color: yellow;
-  font-family: Tahoma, Geneva, sans-serif;
-  font-size: 150%;
+  color: black;
+  font-family: Helvetica;
+  font-size: 175%;
+}
+h2 {
+  color: black;
+  font-family: Helvetica;
+  font-size: 125%;
 }
 p {
-  color: white;
-  font-family: Tahoma, Geneva, sans-serif;
+  color: black;
+  font-family: Helvetica;
   font-size: 100%;
+}
+code-inline {
+  font-family: monospace;
+  background-color: #EDEEEF;
+}
+code {
+  font-family: monospace;
+  background-color: #EDEEEF;
+  position: relative;
+  left: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
