--- a/tools/syntax/prism.css
+++ b/tools/syntax/prism.css
@@ -1,5 +1,5 @@
-/* PrismJS 1.20.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+fortran&plugins=line-highlight+line-numbers+file-highlight+show-language+normalize-whitespace+toolbar */
+/* PrismJS 1.21.0
+https://prismjs.com/download.html#themes=prism&languages=fortran&plugins=line-highlight+line-numbers+show-language+normalize-whitespace+toolbar */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -108,6 +108,7 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
 	color: #9a6e3a;
+	/* This background color was intended by the author of this theme. */
 	background: hsla(0, 0%, 100%, .5);
 }
 
